Node Tools: Undo involving mode change redo node tool operator #114438

Closed
opened 2023-11-03 06:45:56 +01:00 by Sun Kim · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-03 01:06, hash: 21ea67f962be
Worked: n/a

Short description of error
Undo involving mode change redo node tool operator in redo history.

This happens reliably if the first action after entering edit mode is a node tool operation.

Doesn't seem to happen in sculpt mode or with curves.

Exact steps for others to reproduce the error

  • Open attached file
  • Create an undo step in object mode (for example: move cube)
  • Switch to edit mode
  • Executre the node tool
  • Undo twice

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-03 01:06, hash: `21ea67f962be` Worked: n/a **Short description of error** Undo involving mode change redo node tool operator in redo history. This happens reliably if the first action after entering edit mode is a node tool operation. Doesn't seem to happen in sculpt mode or with curves. **Exact steps for others to reproduce the error** - Open attached file - Create an undo step in object mode (for example: move cube) - Switch to edit mode - Executre the node tool - Undo twice <video src="/attachments/867137f1-d053-4975-9014-0bef11266ab3" title="node_tools_edit_undo_issue_3.mp4" controls></video>
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-03 06:45:57 +01:00
Member

Thanks for the report. I can confirm.

Thanks for the report. I can confirm.
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-11 21:24:42 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-12 13:28:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114438
No description provided.